crates/escalier_old_parser/src/snapshots/escalier_old_parser__tests__destructuring.snap
---
source: crates/escalier_old_parser/src/lib.rs
expression: "parse(\"let {x, y} = point;\")"
---
Ok(
    Program {
        body: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 19,
                    },
                },
                span: 0..19,
                kind: VarDecl(
                    VarDecl {
                        pattern: Pattern {
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 4,
                                },
                                end: Position {
                                    line: 0,
                                    column: 10,
                                },
                            },
                            span: 4..10,
                            kind: Object(
                                ObjectPat {
                                    props: [
                                        Shorthand(
                                            ShorthandPatProp {
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 5,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 6,
                                                    },
                                                },
                                                span: 5..6,
                                                ident: BindingIdent {
                                                    name: "x",
                                                    mutable: false,
                                                    span: 5..6,
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 5,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 6,
                                                        },
                                                    },
                                                },
                                                init: None,
                                            },
                                        ),
                                        Shorthand(
                                            ShorthandPatProp {
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 8,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 9,
                                                    },
                                                },
                                                span: 8..9,
                                                ident: BindingIdent {
                                                    name: "y",
                                                    mutable: false,
                                                    span: 8..9,
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 8,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 9,
                                                        },
                                                    },
                                                },
                                                init: None,
                                            },
                                        ),
                                    ],
                                    optional: false,
                                },
                            ),
                            inferred_type: None,
                        },
                        type_ann: None,
                        init: Some(
                            Expr {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 13,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 18,
                                    },
                                },
                                span: 13..18,
                                kind: Ident(
                                    Ident {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 13,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 18,
                                            },
                                        },
                                        span: 13..18,
                                        name: "point",
                                    },
                                ),
                                inferred_type: None,
                            },
                        ),
                        declare: false,
                    },
                ),
            },
        ],
    },
)
